refactor: Refactor pmd.yml

--- a/.github/workflows/pmd.yml
+++ b/.github/workflows/pmd.yml
@@ -1,9 +1,9 @@
-name: PMD Code Analysis
+name: PMD Code Quality Check
 
 on:
   push:
     branches:
-      - '*'
+      - '*'  # Runs on all branches
 
 permissions:
   contents: read
@@ -11,21 +11,21 @@ permissions:
   actions: write
 
 jobs:
-  pmd:
-    name: Run PMD
+  code_quality:
+    name: Run PMD Static Analysis
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Setup Java
+      - name: Set Up Java Environment
         uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: '21'
 
-      - name: Run PMD
+      - name: Execute PMD Scan
         uses: pmd/pmd-github-action@v2
         with:
           version: '7.0.0-rc4'
@@ -33,14 +33,14 @@ jobs:
           rulesets: 'rulesets/java/quickstart.xml,ruleset.xml'
           analyzeModifiedFilesOnly: false
 
-      - name: Upload PMD report
+      - name: Upload PMD Scan Report
         uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: pmd-report.sarif
 
-      - name: "Upload artifact"
+      - name: Store PMD Report as Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: sarif-file
+          name: pmd-sarif-report
           path: pmd-report.sarif
           retention-days: 5
